fixed contrast issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -115,7 +115,7 @@ li {
 }
 
 .bg-ily {
-	background: #606060	
+	background: #404040	
 }
 .brand-ily {
 	color: #FFD700
@@ -123,7 +123,7 @@ li {
 
 @media (inverted-colors: inverted) {
 	.bg-ily {
-		background: #9F9F9F		
+		background: #BFBFBF	
 	}
 	.brand-ily {
 		color: #0028FF
